# jd-gap-analyzer

./: .env.example  .gitignore  CLAUDE.md  CONVENTIONS.md  README.md  pyproject.toml  railway.toml
api/: main.py  vision.py
data/samples/: job1.txt  job2.txt  job3.txt  resume.txt
docs/: feedback-log.md
scripts/: baseline.py  check_verify.py  measure_noise.py  spike_vision_transcribe.py  summarize_events.py  summarize_runs.py
src/: cli.py  events.py  pipeline.py  prompts.py  schemas.py  verify.py
web/: .env.example  package-lock.json  package.json
web/.omc/state/sessions/4f70e9e3-9e50-4a79-9fac-9caedd382654/: pre-tool-advisory-throttle.json
web/app/: globals.css  layout.tsx  page.tsx  theme-toggle.tsx
