[project]
name = "jd-gap-analyzer"
version = "0.1.0"
description = "채용 공고가 요구하는데 이력서에 근거가 없는 항목 Top 3을 뽑는 CLI"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = ["ruff>=0.6", "httpx>=0.27"]

# 라이브러리가 아니라 스크립트 묶음이다. 빌드/설치하지 않는다.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes (미사용 변수/import)
    "I",    # isort (import 정렬)
    "UP",   # pyupgrade (구식 문법 현대화)
    "B",    # bugbear (흔한 버그 패턴)
    "SIM",  # simplify (불필요한 복잡도)
]
ignore = ["E501"]   # line-too-long은 formatter가 처리

[tool.ruff.format]
quote-style = "double"
